
150406	OCSP stapling. New command ssl_ocsp_response filename
	specifies the location of the ocsp response to be stapled.
	The response must be pre-fetched. The idea was borrowed
	from Rob Stradling.

150403	New command ssl_client_renegotiation_interval specifies the
	minimum number of seconds the client must wait between
	renegotiation requests. Default 3600.

150402	Enabled SSL session resumption.
	In do_cmd: don't print "ignoring command" for comments starting
	with '#'.

150330	Added ssl_option no_tlsv1.1 and ssl_option no_tlsv1.2 to disable
	SSL 1.1 and 1.2 respectively.

150330	Released 0.27.3.

150330	Added autoconf check that the ECDHE is available and not disabled.
	Bumped default max connections and listen queue to 500.

150326	Support for ECDHE cipher suites.

150325	New commands ssl_option and ssl_ciphers to individually disable
	insecure protocols and ciphers.

150324	Updated penctl.1 with the new command.

150322	New knob to tweak max number of pending nonblocking connection
	attempts: pending_max N (default 100).

150305	Released 0.27.2.

150228	Moved dlist prototypes to dlist.h.

150227	Added check to close idle connections after a period of inactivity.
	Penctl: idle_timeout N (default 0 = never close idle connections).

150225	Moved git repository to GitHub..

150225	New feature: dummy server. Rather than acting as a proxy,
	Pen will pretend to be a web server with just barely enough
	functionality to work as a test target.
	Penctl: dummy|no dummy.

150224	Yet Another command: abort_on_error|no abort_on_error makes
	Pen call abort() (or not) when encountering a fatal error.

150224	New feature: "reliable idling". Pen will make and maintain a
	number of idle connections to the backend servers. When a connection
	closes, a new one is made (hence "reliable"). Penctl: idlers [N].

150223	In do_cmd: return diagnostics to penctl so the user can see them,
	instead of uselessly sending them to syslog.

150223	New penctl commands: